2009-04-13  Timothy Hatcher  <timothy@apple.com>

        Correctly sort (program) scripts in the Scripts panel popup menu.

        Reviewed by Ada Chan.

        * inspector/front-end/ScriptsPanel.js:
        (WebInspector.ScriptsPanel.prototype._addScriptToFilesMenu): Refactor the code
        and sort "(program)" options by the sourceID to maintain some order.
        * inspector/front-end/utilities.js:
        (indexOfObjectInListSortedByFunction): Fix a bug where identical objects would cause
        an incorrect return value that confuses insertionIndexForObjectInListSortedByFunction.
        Just set 'first' and break so the correct result will be returned.

2009-04-13  Greg Bolsinga  <bolsinga@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=24770
        
        Add custom code for Coordinates that returns null when required by the
        Geolocation spec.
        
        http://dev.w3.org/geo/api/spec-source.html#coordinates

        * WebCore.xcodeproj/project.pbxproj:
        * bindings/js/JSCoordinatesCustom.cpp: Added.
        (WebCore::JSCoordinates::altitude): returns null if the value cannot be provided.
        (WebCore::JSCoordinates::altitudeAccuracy): Ditto
        (WebCore::JSCoordinates::heading): Ditto
        (WebCore::JSCoordinates::speed): Ditto
        * page/Coordinates.h:
        (WebCore::Coordinates::create): Add 'canProvide' parameters and values
        (WebCore::Coordinates::canProvideAltitude):
        (WebCore::Coordinates::canProvideAltitudeAccuracy):
        (WebCore::Coordinates::canProvideHeading):
        (WebCore::Coordinates::canProvideSpeed):
        (WebCore::Coordinates::Coordinates):
        * page/Coordinates.idl: specify custom getters
        * platform/mac/GeolocationServiceMac.mm: Set the values correctly if they cannot be provided.
        (-[WebCoreCoreLocationObserver locationManager:didUpdateToLocation:fromLocation:]):
